تغییرات اولیه وبلاگ

--- a/index1.html
+++ b/index1.html
@@ -19,40 +19,37 @@
   <div class="container-fluid px-4 py-4">
   <!-- Header -->
   <header class="text-center mb-5">
-    <h1>MY BLOG</h1>
-    <p>Welcome to the blog of <span class="badge rounded-0 bg-dark text-white p-2 fs-6">unknown</span></p>
+    <h1><-BlogTitle-></h1>
+    <p><-BlogTitle-> <span class="badge rounded-0 bg-dark text-white p-2 fs-6"><-BlogTitle-></span></p>
   </header> 
    <div class="row gx-4">
     <!-- Blog Entries -->
     <main class="col-lg-8">
       <!-- Blog Post 1 -->
+       
   <div class="card rounded-0">
-    <img src="img/woods.jpg" class="card-img-top rounded-0" alt="Nature">
+    <BlogPhoto>
+</BlogPhoto>
     <div class="card-body rounded-0">
-      <h3 class="card-title">TITLE HEADING</h3>
-      <h6 class="text-muted">Title description, <span class="text-secondary">April 7, 2014</span></h6>
-      <p class="card-text mt-3">Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat.
-         Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. </p>
+      <h3 class="card-title"><-BlogDescription-></h3>
+      <h6 class="text-muted"><-BlogTitle->, <span class="text-secondary"><-BlogTimeZone-></span></h6>
+      <p class="card-text mt-3"> <-PostContent-></p>
       <div class="d-flex justify-content-between">
-        <button type="button" class="btn btn-outline-secondary text-dark botder rounded-0 px-3 py-2">READ MORE &raquo;</button>
-        <span><strong>Comments</strong> <span class="badge rounded-0 bg-dark text-white">0</span></span>
+        <button type="button" class="btn btn-outline-secondary text-dark botder rounded-0 px-3 py-2"><-BlogPostAuthor-> &raquo;</button>
+        <span><strong><-TagName-></strong> <span class="badge rounded-0 bg-dark text-white"><-CategoryId-></span></span>
       </div>
     </div>
   </div> 
    <!-- Blog Post 2 --> 
-     <div class="card rounded-0">
-    <img src="img/bridge.jpg" class="card-img-top rounded-0" alt="Norway">
+     <div class="card rounded-0"><BlogPhoto>
+</BlogPhoto>
     <div class="card-body rounded-0">
-      <h3 class="card-title">BLOG ENTRY</h3>
-      <h6 class="text-muted">Title description, <span class="text-secondary ">April 2, 2014</span></h6>
-      <p class="card-text mt-3">MMauris neque quam, fermentum ut nisl vitae, 
-        convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan
-        tortor cursus at. Phasellus sed ultricies mi non congue ullam corper.
-         Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies 
-         congue gravida diam non fringilla.</p>
+      <h3 class="card-title"><-BlogDescription-></h3>
+      <h6 class="text-muted"><-BlogTitle-> <span class="text-secondary "><-BlogTimeZone-></span></h6>
+      <p class="card-text mt-3"><-PostContent->.</p>
       <div class="d-flex justify-content-between">
-        <button type="button" class="btn btn-outline-secondary text-dark botder rounded-0 px-3 py-2">READ MORE &raquo;</button>
-        <span><strong>Comments</strong> <span class="badge rounded-0 bg-dark text-white rounded-pill">2</span></span>
+        <button type="button" class="btn btn-outline-secondary text-dark botder rounded-0 px-3 py-2"><-BlogPostAuthor->E &raquo;</button>
+        <span><strong><-TagName-></strong> <span class="badge rounded-0 bg-dark text-white rounded-pill"><-CategoryId-></span></span>
       </div>
     </div>
   </div>
@@ -60,13 +57,11 @@
 <!-- Sidebar -->
  <aside class="col-lg-4">
   <!-- About Card -->
-  <div class="card rounded-0">
-    <img src="img/avatar_g.jpg" class="card-img-top rounded-0" alt="Avatar">
+  <div class="card rounded-0"><BlogPhoto>
+</BlogPhoto>
     <div class="card-body rounded-0">
-      <h4 class="card-title">My Name</h4>
-      <p class="card-text">Just me, myself and I, exploring the universe of uknownment. I have a 
-        heart of love and a interest of lorem ipsum and mauris neque quam blog.
-         I want to share my world with you.</p>
+      <h4 class="card-title"><-BlogDescription-></h4>
+      <p class="card-text"><-PostContent-></p>
     </div>
   </div> 
 
