--- a/index1.html
+++ b/index1.html
@@ -20,18 +20,19 @@
   <!-- Header -->
   <header class="text-center mb-5">
     <h1><-BlogTitle-></h1>
-    <p><-BlogTitle-> <span class="badge rounded-0 bg-dark text-white p-2 fs-6"><-BlogTitle-></span></p>
+    <p>Welcome to the blog of <span class="badge rounded-0 bg-dark text-white p-2 fs-6"><-BlogId-></span></p>
   </header> 
    <div class="row gx-4">
     <!-- Blog Entries -->
     <main class="col-lg-8">
       <!-- Blog Post 1 -->
        
-  <div class="card rounded-0">
+  <div class="card rounded-0">  
     <BlogPhoto>
-</BlogPhoto>
-    <div class="card-body rounded-0">
-      <h3 class="card-title"><-BlogDescription-></h3>
+  <img src="img/woods.jpg" class="card-img-top rounded-0" alt="Nature">
+    </BlogPhoto>
+      <div class="card-body rounded-0">
+   <h3 class="card-title"><-BlogDescription-></h3>
       <h6 class="text-muted"><-BlogTitle->, <span class="text-secondary"><-BlogTimeZone-></span></h6>
       <p class="card-text mt-3"> <-PostContent-></p>
       <div class="d-flex justify-content-between">
@@ -41,7 +42,9 @@
     </div>
   </div> 
    <!-- Blog Post 2 --> 
-     <div class="card rounded-0"><BlogPhoto>
+     <div class="card rounded-0">
+      <img src="img/woods.jpg" class="card-img-top rounded-0" alt="Nature">
+    <BlogPhoto>
 </BlogPhoto>
     <div class="card-body rounded-0">
       <h3 class="card-title"><-BlogDescription-></h3>
