--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap Blog Template</title>
+  <title> my blog</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .card {
@@ -29,10 +29,10 @@
        
   <div class="card rounded-0">  
     <BlogPhoto>
-  <img src="img/woods.jpg" class="card-img-top rounded-0" alt="Nature">
+      <img src="img/woods.jpg" class="card-img-top rounded-0" alt="Nature">
     </BlogPhoto>
       <div class="card-body rounded-0">
-   <h3 class="card-title"><-BlogDescription-></h3>
+   <h3 class="card-title"><-CategoryName-></h3>
       <h6 class="text-muted"><-BlogTitle->, <span class="text-secondary"><-BlogTimeZone-></span></h6>
       <p class="card-text mt-3"> <-PostContent-></p>
       <div class="d-flex justify-content-between">
@@ -43,8 +43,8 @@
   </div> 
    <!-- Blog Post 2 --> 
      <div class="card rounded-0">
-      <img src="img/woods.jpg" class="card-img-top rounded-0" alt="Nature">
     <BlogPhoto>
+            <img src="img/avatar_g.jpg" class="card-img-top rounded-0" alt="avator">
 </BlogPhoto>
     <div class="card-body rounded-0">
       <h3 class="card-title"><-BlogDescription-></h3>
@@ -60,7 +60,9 @@
 <!-- Sidebar -->
  <aside class="col-lg-4">
   <!-- About Card -->
-  <div class="card rounded-0"><BlogPhoto>
+  <div class="card rounded-0">
+    <BlogPhoto>     
+     <img src="img/bridge.jpg" class="card-img-top rounded-0" alt="Nature">
 </BlogPhoto>
     <div class="card-body rounded-0">
       <h4 class="card-title"><-BlogDescription-></h4>
