--- a/index1.html
+++ b/index1.html
@@ -5,15 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> my blog</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .card {
-      margin-bottom: 50px ;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-    }
-    .list-group-item:hover {
-      background-color: #e9ecef;
-    }
-  </style>
 </head>
 <body class="bg-light">
   <div class="container-fluid px-4 py-4">
@@ -26,105 +17,22 @@
     <!-- Blog Entries -->
     <main class="col-lg-8">
       <!-- Blog Post 1 -->
-       
+     <BLOGFA>
   <div class="card rounded-0">  
-    <BlogPhoto>
       <img src="img/woods.jpg" class="card-img-top rounded-0" alt="Nature">
-    </BlogPhoto>
       <div class="card-body rounded-0">
-   <h3 class="card-title"><-CategoryName-></h3>
-      <h6 class="text-muted"><-BlogTitle->, <span class="text-secondary"><-BlogTimeZone-></span></h6>
+   <h3 class="card-title"><-PostTitle-></h3>
+      <h6 class="text-muted"><-PostTitle->, <span class="text-secondary"><-PostDate-></span></h6>
       <p class="card-text mt-3"> <-PostContent-></p>
       <div class="d-flex justify-content-between">
-        <button type="button" class="btn btn-outline-secondary text-dark botder rounded-0 px-3 py-2"><-BlogPostAuthor-> &raquo;</button>
-        <span><strong><-TagName-></strong> <span class="badge rounded-0 bg-dark text-white"><-CategoryId-></span></span>
+        <button type="button" class="btn btn-outline-secondary text-dark botder rounded-0 px-3 py-2"> &raquo;</button>
+        <span><strong></span> <span class="badge rounded-0 bg-dark text-white"></span></span>
       </div>
     </div>
-  </div> 
-   <!-- Blog Post 2 --> 
-     <div class="card rounded-0">
-    <BlogPhoto>
-            <img src="img/avatar_g.jpg" class="card-img-top rounded-0" alt="avator">
-</BlogPhoto>
-    <div class="card-body rounded-0">
-      <h3 class="card-title"><-BlogDescription-></h3>
-      <h6 class="text-muted"><-BlogTitle-> <span class="text-secondary "><-BlogTimeZone-></span></h6>
-      <p class="card-text mt-3"><-PostContent->.</p>
-      <div class="d-flex justify-content-between">
-        <button type="button" class="btn btn-outline-secondary text-dark botder rounded-0 px-3 py-2"><-BlogPostAuthor->E &raquo;</button>
-        <span><strong><-TagName-></strong> <span class="badge rounded-0 bg-dark text-white rounded-pill"><-CategoryId-></span></span>
-      </div>
-    </div>
-  </div>
-</main>
-<!-- Sidebar -->
- <aside class="col-lg-4">
-  <!-- About Card -->
-  <div class="card rounded-0">
-    <BlogPhoto>     
-     <img src="img/bridge.jpg" class="card-img-top rounded-0" alt="Nature">
-</BlogPhoto>
-    <div class="card-body rounded-0">
-      <h4 class="card-title"><-BlogDescription-></h4>
-      <p class="card-text"><-PostContent-></p>
-    </div>
-  </div> 
-
-   <!-- Popular Posts --> 
-     <div class="card rounded-0">
-    <div class="card-header bg-light p-3 h5">Popular Posts</div>
-    <ul class="list-group list-group-flush rounded-0">
-      <li class="list-group-item d-flex align-items-start">
-        <img src="img/workshop.jpg" alt="Image" class="me-3" style="width:50px">
-        <div>Lorem<br><small>Sed mattis nunc</small></div>
-      </li>
-      <li class="list-group-item d-flex align-items-start">
-        <img src="img/gondol.jpg" alt="Image" class="me-3" style="width:50px">
-        <div>Ipsum<br><small>Praes tinci sed</small></div>
-      </li>
-      <li class="list-group-item d-flex align-items-start">
-        <img src="img/skies (1).jpg" alt="Image" class="me-3" style="width:50px">
-        <div>Dorum<br><small>Ultricies congue</small></div>
-      </li>
-      <li class="list-group-item d-flex align-items-start d-none d-md-flex">
-        <img src="img/rock.jpg" alt="Image" class="me-3" style="width:50px">
-        <div>Mingsum<br><small>Lorem ipsum dipsum</small></div>
-      </li>
-    </ul>
-  </div>
-
-    <!-- Tags --> 
-      <div class="card rounded-0">
-    <div class="card-header bg-light p-3 h5 align-items-start">Tags</div>
-    <div class="card-body">
-      <span class="tag bg-dark text-white rounded-0  me-1 px-2">Travel</span>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">New York</span>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">London</span>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">IKEA</span>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">NORWAY</span><br>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">DIY</span>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">Ideas</span>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">Baby</span>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">Family</span>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">News</span>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">Clothing</span><br>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">Shopping</span>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">Sports</span>
-      <span class="tag bg-light text-dark rounded-0  me-1 px-2">Games</span>
-    </div>
-  </div>
-</aside>
- </div>
+  </div>  
+ </BLOGFA>
+    </main>
 </div>
-
-<!-- Footer -->
-
-<footer class="bg-dark text-white text-start py-4 mt-5">
-  <div class="container-fluid px-4">
-    <button class="btn btn-secondary me-2" disabled>Previous</button>
-    <button class="btn btn-secondary">Next &raquo;</button>
-    <p class="mt-3 mb-0">Powered by <a href="https://getbootstrap.com/" class="text-white text-decoration-underline" target="_blank">w3.css</a></p>
   </div>
-</footer>
 </body>
 </html>
