--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> my blog</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .card {
+      margin-bottom: 50px ;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+    }
+    .list-group-item:hover {
+      background-color: #e9ecef;
+    }
+  </style>
 </head>
 <body class="bg-light">
   <div class="container-fluid px-4 py-4">
@@ -22,17 +31,17 @@
       <img src="img/woods.jpg" class="card-img-top rounded-0" alt="Nature">
       <div class="card-body rounded-0">
    <h3 class="card-title"><-PostTitle-></h3>
-      <h6 class="text-muted"><-PostTitle->, <span class="text-secondary"><-PostDate-></span></h6>
+      <h6 class="text-muted"><-PostTitle->, <span class="text-secondary"><-PostDate-> </span></h6>
       <p class="card-text mt-3"> <-PostContent-></p>
       <div class="d-flex justify-content-between">
-        <button type="button" class="btn btn-outline-secondary text-dark botder rounded-0 px-3 py-2"> &raquo;</button>
-        <span><strong></span> <span class="badge rounded-0 bg-dark text-white"></span></span>
+        <button type="button" class="btn btn-outline-secondary text-dark botder rounded-0 px-3 py-2"><-BlogPostAuthor-> &raquo;</button>
+        <span><strong></strong> <span class="badge rounded-0 bg-dark text-white"></span></span>
       </div>
     </div>
-  </div>  
- </BLOGFA>
-    </main>
-</div>
   </div>
+ </BLOGFA>
+</main>
+</div>
+  </div>  
 </body>
 </html>
