--- a/index1.html
+++ b/index1.html
@@ -14,6 +14,7 @@
       background-color: #e9ecef;
     }
   </style>
+
 </head>
 <body class="bg-light">
   <div class="container-fluid px-4 py-4">
@@ -26,7 +27,9 @@
     <!-- Blog Entries -->
     <main class="col-lg-8">
       <!-- Blog Post 1 -->
+
      <BLOGFA>
+
   <div class="card rounded-0">  
       <img src="img/woods.jpg" class="card-img-top rounded-0" alt="Nature">
       <div class="card-body rounded-0">
@@ -35,7 +38,7 @@
       <p class="card-text mt-3"> <-PostContent-></p>
       <div class="d-flex justify-content-between">
         <button type="button" class="btn btn-outline-secondary text-dark botder rounded-0 px-3 py-2"><-BlogPostAuthor-> &raquo;</button>
-        <span><strong></strong> <span class="badge rounded-0 bg-dark text-white"></span></span>
+        <span><strong>..</strong> <span class="badge rounded-0 bg-dark text-white">..</span></span>
       </div>
     </div>
   </div>
